# game-of-life

./: CMakeCache.txt  CMakeLists.txt  Cell.cpp  Grid.cpp  Makefile  README.md  cmake_install.cmake  main.cpp  run  sfml-app
Headers/: Cell.hpp  Grid.hpp
headers/: Cell.hpp  Grid.hpp
